<resources>
    <string name="app_name">ETNA Wallet</string>
    <string name="notimplemented">This fragment is not implemented</string>
    <string name="profile_my_wallets">My wallets</string>
    <string name="tabbar_general">General</string>
    <string name="tabbar_profile">Profile</string>
    <string name="tabbar_notification">Notification</string>
    <string name="tabbar_swap">Swap</string>
    <string name="tabbar_exchange">Exchange</string>
    <string name="add_wallet_description">Here you can store your cryptocurrency with a high level of safety.</string>
    <string name="create_wallet">Create wallet</string>
    <string name="import_wallet">Import wallet</string>
    <string name="select_wallet">Select wallet</string>
    <string name="import_multi_wallet">Import Multiwallet</string>
    <string name="import_single_wallet">Import %1$s</string>
    <string name="import_variant_recovery_phrase">Recovery\nphrase</string>
    <string name="import_variant_keystore_json">Keystore\nJSON</string>
    <string name="import_variant_private_key">Private\nkey</string>
    <string name="import_variant_address">Address</string>
    <string name="open_my_wallet">Open my wallet</string>
    <string name="multiwallet">Multiwallet</string>
    <string name="str_import">Import</string>
    <string name="wallet_name">Wallet name</string>
    <string name="enter_name">Enter name</string>
    <string name="recovery_phrase">Recovery phrase</string>
    <string name="type_here">Type here</string>
    <string name="add_wallet">Add wallet</string>
    <string name="no_value">----</string>
    <string name="import_single_wallet_address_variant">%1$s address</string>
    <string name="delete_wallet">Delete wallet</string>
    <string name="wallet_info_set_as_active_wallet">Set as active wallet</string>
    <string name="wallet_info_active_wallet">Active wallet</string>
    <string name="active">Active</string>
    <string name="change24h_suffix"> / 24h</string>
    <string name="settings">Settings</string>
    <string name="currency">Currency</string>
    <string name="active_network">Active network</string>
    <string name="net_active">\u2022 %1$s active</string>
    <string name="active_wallet">\u2022 Active wallet</string>
    <string name="mainnet">Mainnet</string>
    <string name="testnet">Testnet</string>
    <string name="wallet_name_testnet">%1$s (Testnet)</string>
    <string name="open_my_account">Open my account</string>
    <string name="create_account">Create account</string>
    <string name="start">Start</string>
    <string name="welcome">Welcome to ETNA Wallet</string>
    <string name="your_email">Your Email</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_apple_id">Login with Apple ID</string>
    <string name="or">OR</string>
    <string name="by_clicking_agree_terms">By clicking “Create Account”, you agree to our <a href="https://docs.github.com/en/github/site-policy/github-terms-of-service">Terms and Conditions</a></string>
    <string name="check_your_email">Check your Email</string>
    <string name="open_email">Open Email</string>
    <string name="continue_action">Continue</string>
    <string name="resend_email">Resend email</string>
    <string name="create_password">Create password</string>
    <string name="create_password_description">The password must contain at least 8 characters and numbers, upper and lower case letters.</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="com_auth0_client_id">WcU1RYmisYe6cvEOCi5RaamlaNvICddy</string>
    <string name="com_auth0_domain">login-wallet.us.auth0.com</string>
    <string name="create_pin">Create PIN</string>
    <string name="create_pin_subtitle">Add PIN and use this for login next time</string>
    <string name="confirm_pin">Confirm your PIN</string>
    <string name="confirm_pin_subtitle">Check that you have the correct PIN code</string>
    <string name="check_pin">PIN-code</string>
    <string name="activate_biometry_title">Use Biometry</string>
    <string name="activate_biometry_subtitle">Activate Biometry you don\'t need to confirm your PIN every time.</string>
    <string name="activate_biometry">Activate Biometry</string>
    <string name="skip">Skip</string>
    <string name="biometry_title">Biometric login for ETNA Wallet</string>
    <string name="biometry_subtitle">Log in using your biometric credential</string>
    <string name="blockchain_asset_type_currency">Currency</string>
    <string name="blockchain_asset_type_token">Token</string>
    <string name="asset_info_market_title">Market</string>
    <string name="asset_info_history_title">History</string>
    <string name="market_overview">Market overview</string>
    <string name="transaction_history">Transaction history</string>
    <string name="asset_info_balance_title">Total %1$s balance</string>
    <string name="asset_info_balance_subtitle">%1$s | %2$s</string>
    <string name="asset_info_balance_balance">%1$s %2$s</string>
    <string name="asset_action_send">Send</string>
    <string name="asset_action_receive">Receive</string>
    <string name="asset_action_swap">Swap</string>
    <string name="graph_period_day">24h</string>
    <string name="graph_period_week">Week</string>
    <string name="graph_period_month">Month</string>
    <string name="graph_period_year">Year</string>
    <string name="tx_status_failed">Failed</string>
    <string name="tx_status_success">Success</string>
    <string name="tx_title_buy">Buy %1$s</string>
    <string name="tx_title_sell">Sell %1$s</string>
    <string name="date_format_yesterday">Yesterday %1$s</string>
    <string name="date_format_today">Today %1$s</string>
    <string name="exchange">Exchange</string>
    <string name="change_wallet_name">Change wallet name</string>
    <string name="change_name">Change name</string>
    <string name="get_recovery_phrase">Get recovery phrase</string>
    <string name="save">Save</string>
    <string name="recovery_phrase_title">Recovery phrase</string>
    <string name="do_it_later">Do it later</string>
    <string name="recovery_phrase_lost_desc">I understand that if I lost my recovery phrase, I lost access to my wallet.</string>
    <string name="recovery_phrase_initial_desc">Make your wallet safer with Recovery Phrase. On the next screen you will see recovery phrase which consists of 12 words.</string>
    <string name="recovery_phrase_show_title">Your recovery phrase</string>
    <string name="recovery_phrase_show_desc">Write down or copy this recovery phrase in the right order and save them somewhere safe.</string>
    <string name="recovery_phrase_verify_title">Verify recovery phrase</string>
    <string name="recovery_phrase_verify_desc">Tap on the words to verify that you saved the recovery phrase in the right order.</string>
    <string name="recovery_phrase_success_title">Phrase verified!</string>
    <string name="recovery_phrase_success_desc">Recovery phrase successfully verified!\nAnd you can restore access to the wallet using the phrase.</string>
    <string name="recovery_phrase_success_image_desc">Phrase verified</string>
    <string name="recovery_phrase_info_title">Recovery phrase info</string>
    <string name="recovery_phrase_info_action_title">Info</string>
    <string name="recovery_phrase_info_part1_title">What is my 12 word recovery phrase?</string>
    <string name="recovery_phrase_info_part1_desc">Recovery Phrase is a list of 12 or 24 words that represent the single secret piece of data that is used to generate both the public and private key of your account. You are the only one who has access to your Recovery Phrase.</string>
    <string name="recovery_phrase_info_part2_title">Where is my 12 word recovery phrase?</string>
    <string name="recovery_phrase_info_part2_desc">Phrase is a list of 12 or 24 words that represent the single secret piece of data that is used to generate both the public and private key of your account. You are the only one who has access to your Recovery Phrase.</string>
    <string name="recovery_phrase_info_part3_title">Where do you put recovery phrases?</string>
    <string name="recovery_phrase_info_part3_desc">Write it down on a piece of paper and store it in a safe and secure place.\nStore it inside a Password Manager.\nNote taking Apps like Notes for iOS, Samsung Notes for Android or OneNote let you create notes protected with a password.</string>
    <string name="try_again">Try again</string>
    <string name="delete_wallet_confirmation_title">Are you absolutely sure?</string>
    <string name="delete_wallet_confirmation_subtitle">This action cannot be undone. This will permanently delete access to your wallet.</string>
    <string name="delete_wallet_confirmation_edittext_title">Please type ”Wallet, wallet, wallet” to confirm</string>
    <string name="delete_wallet_confirmation_confirm_text">I understand that if I delete wallet I will loose access to it.</string>
    <string name="delete_wallet_success_text">Wallet deleted</string>
    <string name="select_wallet_type_active_multiwallet">\u2022 Active Multiwallet</string>
    <string name="select_wallet_type_multiwallet">Multiwallet</string>
    <string name="select_wallet_type_active_flatwallet">\u2022 Active Flatwallet</string>
    <string name="select_wallet_type_flatwallet">Flatwallet</string>
    <string name="testnet_warning_desc">Testnet tokens have zero financial worth, they are used by developers to try out new applications without needing to spend valuable coins.</string>
    <string name="testnet_warning_title">What is testnet?</string>
    <string name="don_t_show_this_message_again">Don’t show this message again</string>
    <string name="got_it">Got it</string>
    <string name="private_key">Private key</string>
    <string name="import_wallet_address_notice">You can ”see” any public address without revealing your private key. You can view balances and transactions, but not send them.</string>
    <string name="import_private_key_notice">Private key has to be 64 characters long</string>
    <string name="error_invalid_mnemonic">Invalid Mnemonic</string>
    <string name="error_unable_login">Unable to login</string>
    <string name="error_unable_to_prepare_transaction">Unable to prepare transaction</string>
    <string name="error_unable_to_send_transaction">Unable to send transaction</string>
    <string name="error_smth_wrong">Something went wrong</string>
    <string name="error_wrong_pin">Wrong PIN</string>
    <string name="error_wrong_otp">Wrong OTP</string>
    <string name="error_no_internet_connection">No Internet Connection</string>
    <string name="error_address_is_not_valid">Address is not valid</string>
    <string name="error_waiting_internet_connection">Connecting…</string>
    <string name="error_no_camera_permission">Camera permission is required for QR scanner</string>
    <string name="error_invalid_amount">Invalid Amount</string>
    <string name="error_checking_address">Checking Address</string>
    <string name="error_wrong_address">Wrong Address</string>
    <string name="error_invalid_data">Invalid data for send</string>
    <string name="error_seed_phrase_space">Blank space is not allowed. Please enter 12 words one by one confirming every word by pressing Enter.</string>
    <string name="wallet_platform_settings_title">Configure %1$s</string>
    <string name="wallet_platform_settings_platform_name">%1$s (%2$s)</string>
    <string name="wallet_platform_tokens_list">Tokens list</string>
    <string name="wallet_platform_add_token">Add token</string>
    <string name="wallet_platform_add_nft">Add NFT</string>
    <string name="wallet_platform_add_token_title">Add new token</string>
    <string name="wallet_platform_add_token_address_desc">Add token address</string>
    <string name="wallet_platform_add_token_address_hint">Token address</string>
</resources>