<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_backgroundColor">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/layout_basic_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/part1TitleTextView"
        style="@style/TextAppearance.Etna.HeadlineSmallBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_marginTop="@dimen/margin_from_topbar"
        android:text="@string/recovery_phrase_info_part1_title"
        android:textColor="@color/c_primaryColor100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeToolbar" />

    <TextView
        android:id="@+id/part1DescTextView"
        style="@style/TextAppearance.Etna.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_marginTop="12dp"
        android:text="@string/recovery_phrase_info_part1_desc"
        android:textColor="@color/c_primaryColor300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/part1TitleTextView" />

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/c_primaryColor700"
        android:layout_marginHorizontal="@dimen/base_margin"
        app:layout_constraintTop_toBottomOf="@id/part1DescTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/base_margin" />

    <TextView
        android:id="@+id/part2TitleTextView"
        style="@style/TextAppearance.Etna.HeadlineSmallBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/recovery_phrase_info_part2_title"
        android:textColor="@color/c_primaryColor100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator1" />

    <TextView
        android:id="@+id/part2DescTextView"
        style="@style/TextAppearance.Etna.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_marginTop="12dp"
        android:text="@string/recovery_phrase_info_part2_desc"
        android:textColor="@color/c_primaryColor300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/part2TitleTextView" />

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/c_primaryColor700"
        android:layout_marginHorizontal="@dimen/base_margin"
        app:layout_constraintTop_toBottomOf="@id/part2DescTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/base_margin" />

    <TextView
        android:id="@+id/part3TitleTextView"
        style="@style/TextAppearance.Etna.HeadlineSmallBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/recovery_phrase_info_part3_title"
        android:textColor="@color/c_primaryColor100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator2" />

    <TextView
        android:id="@+id/part3DescTextView"
        style="@style/TextAppearance.Etna.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_marginTop="12dp"
        android:text="@string/recovery_phrase_info_part3_desc"
        android:textColor="@color/c_primaryColor300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/part3TitleTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>