<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_backgroundColor">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/layout_basic_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recoveryPhraseDescTextView"
        style="@style/TextAppearance.Etna.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_marginTop="@dimen/margin_from_topbar"
        android:text="@string/recovery_phrase_initial_desc"
        android:textAlignment="center"
        android:textColor="@color/c_primaryColor300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeToolbar" />

    <network.etna.etnawallet.ui.base.buttons.MainButton
        android:id="@+id/laterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_marginBottom="@dimen/bottom_space"
        android:text="@string/do_it_later"
        app:buttonColor="gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <network.etna.etnawallet.ui.base.buttons.MainButton
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_marginBottom="@dimen/base_margin"
        android:text="@string/continue_action"
        app:layout_constraintBottom_toTopOf="@id/laterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/recoveryPhraseLostDescTextView"
        style="@style/TextAppearance.Etna.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="@dimen/base_margin"
        android:drawablePadding="12dp"
        android:gravity="start|center_vertical"
        android:text="@string/recovery_phrase_lost_desc"
        android:textColor="@color/c_primaryColor300"
        app:drawableStartCompat="@drawable/square_checkbox"
        app:drawableTint="@color/c_primaryColor300"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_recovery_phrase_initial"
        app:layout_constraintBottom_toTopOf="@id/recoveryPhraseLostDescTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recoveryPhraseDescTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>